@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,8 +16,7 @@
 package ghidra.app.plugin.core.progmgr;
 
 import java.beans.PropertyEditor;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.time.Duration;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -44,6 +43,7 @@ import ghidra.framework.model.*;
 import ghidra.framework.options.*;
 import ghidra.framework.plugintool.*;
 import ghidra.framework.plugintool.util.PluginStatus;
+import ghidra.framework.protocol.ghidra.GhidraURL;
 import ghidra.program.model.address.*;
 import ghidra.program.model.listing.Program;
 import ghidra.program.model.symbol.Symbol;
@@ -187,11 +187,10 @@ public class ProgramManagerPlugin extends Plugin implements ProgramManager, Opti
 
 	@Override
 	public Program openProgram(URL ghidraURL, int state) {
-		String location = ghidraURL.getRef();
 		Program program = openProgram(new ProgramLocator(ghidraURL), state);
-
+		String location = GhidraURL.getDecodedReference(ghidraURL);
 		if (program != null && location != null && state == OPEN_CURRENT) {
-			gotoProgramRef(program, ghidraURL.getRef());
+			gotoProgramRef(program, location);
 			programMgr.saveLocation();
 		}
 		return program;
@@ -635,6 +634,13 @@ public class ProgramManagerPlugin extends Plugin implements ProgramManager, Opti
 
 		OpenVersionedFileDialog<Program> openDialog =
 			new OpenVersionedFileDialog<>(tool, "Open Program", Program.class);
+
+		DomainFile startFile = null;
+		Program p = getCurrentProgram();
+		if (p != null) {
+			startFile = p.getDomainFile();
+		}
+		openDialog.selectDomainFile(startFile);
 		openDialog.setHelpLocation(new HelpLocation(HelpTopics.PROGRAM, "Open_File_Dialog"));
 
 		openDialog.addOkActionListener(e -> {
@@ -897,9 +903,9 @@ public class ProgramManagerPlugin extends Plugin implements ProgramManager, Opti
 			return null;
 		}
 		try {
-			return new URL(url);
+			return new URI(url).toURL();
 		}
-		catch (MalformedURLException e) {
+		catch (MalformedURLException | URISyntaxException e) {
 			return null;
 		}
 	}
