@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -29,6 +29,11 @@ import ghidra.util.HelpLocation;
  * <p>
  * Implementations of this interface are usually done via a Plugin
  * and then registered via {@link Plugin}'s registerServiceProvided().
+ * <p>
+ * Consumers of this service should expect multiple instance types to be returned from
+ * {@link PluginTool#getServices(Class)}, and should add a service listener via
+ * {@link PluginTool#addServiceListener(ghidra.framework.plugintool.util.ServiceListener)}
+ * if service instances are retained to be notified when service instances are changed.
  */
 public interface StringTranslationService {
 	/**
@@ -37,10 +42,10 @@ public interface StringTranslationService {
 	 * @param tool {@link PluginTool}
 	 * @return sorted list of currently enabled StringTranslationServices
 	 */
-	public static List<StringTranslationService> getCurrentStringTranslationServices(
+	static List<StringTranslationService> getCurrentStringTranslationServices(
 			PluginTool tool) {
 		List<StringTranslationService> translationServices =
-			new ArrayList<>(Arrays.asList(tool.getServices(StringTranslationService.class)));
+			new ArrayList<>(List.of(tool.getServices(StringTranslationService.class)));
 		Collections.sort(translationServices,
 			(s1, s2) -> s1.getTranslationServiceName().compareTo(s2.getTranslationServiceName()));
 		return translationServices;
@@ -52,7 +57,7 @@ public interface StringTranslationService {
 	 *
 	 * @return string name.
 	 */
-	public String getTranslationServiceName();
+	String getTranslationServiceName();
 
 	/**
 	 * Returns the {@link HelpLocation} instance that describes where to direct the user
@@ -60,7 +65,7 @@ public interface StringTranslationService {
 	 *
 	 * @return {@link HelpLocation} instance or null.
 	 */
-	public default HelpLocation getHelpLocation() {
+	default HelpLocation getHelpLocation() {
 		return null;
 	}
 
@@ -71,13 +76,21 @@ public interface StringTranslationService {
 	 *
 	 * @param program the program containing the data instances.
 	 * @param stringLocations {@link List} of string locations.
+	 * @param options {@link TranslateOptions}
 	 */
-	public void translate(Program program, List<ProgramLocation> stringLocations,
+	void translate(Program program, List<ProgramLocation> stringLocations,
 			TranslateOptions options);
 
+	/**
+	 * Options that are given by the callers of 
+	 * {@link StringTranslationService#translate(Program, List, TranslateOptions)}.
+	 * 
+	 * @param autoTranslate boolean flag, if true the translation service instance should try
+	 * to translate the values without user interaction
+	 */
 	public record TranslateOptions(boolean autoTranslate) {
 		public static TranslateOptions NONE = new TranslateOptions(false);
-	};
+	}
 
 	/**
 	 * Helper that creates a {@link HelpLocation} based on the plugin and sts.
@@ -87,7 +100,7 @@ public interface StringTranslationService {
 	 * @return HelpLocation with topic equal to the plugin name and anchor something like
 	 * "MyTranslationServiceName_String_Translation_Service".
 	 */
-	public static HelpLocation createStringTranslationServiceHelpLocation(
+	static HelpLocation createStringTranslationServiceHelpLocation(
 			Class<? extends Plugin> pluginClass, StringTranslationService sts) {
 		return new HelpLocation(PluginDescription.getPluginDescription(pluginClass).getName(),
 			sts.getTranslationServiceName() + "_String_Translation_Service");
