@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,6 +15,7 @@
  */
 package agent.gdb.rmi;
 
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.startsWith;
 import static org.junit.Assert.*;
 
@@ -30,14 +31,11 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.commons.lang3.exception.ExceptionUtils;
-import org.junit.Before;
+import org.junit.*;
 
 import ghidra.app.plugin.core.debug.gui.AbstractGhidraHeadedDebuggerTest;
 import ghidra.app.plugin.core.debug.service.tracermi.TraceRmiPlugin;
 import ghidra.app.plugin.core.debug.utils.ManagedDomainObject;
-import ghidra.app.services.TraceRmiService;
-import ghidra.dbg.target.TargetExecutionStateful.TargetExecutionState;
-import ghidra.dbg.testutil.DummyProc;
 import ghidra.debug.api.tracermi.*;
 import ghidra.framework.*;
 import ghidra.framework.main.ApplicationLevelOnlyPlugin;
@@ -47,11 +45,14 @@ import ghidra.framework.plugintool.PluginsConfiguration;
 import ghidra.framework.plugintool.util.*;
 import ghidra.program.model.address.Address;
 import ghidra.program.model.address.AddressRangeImpl;
+import ghidra.pty.testutil.DummyProc;
+import ghidra.trace.model.TraceExecutionState;
 import ghidra.trace.model.breakpoint.TraceBreakpointKind;
 import ghidra.trace.model.breakpoint.TraceBreakpointKind.TraceBreakpointKindSet;
-import ghidra.trace.model.target.*;
-import ghidra.util.Msg;
-import ghidra.util.NumericUtilities;
+import ghidra.trace.model.target.TraceObject;
+import ghidra.trace.model.target.TraceObjectValue;
+import ghidra.trace.model.target.path.KeyPath;
+import ghidra.util.*;
 
 public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebuggerTest {
 	/**
@@ -69,7 +70,7 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 			""";
 	// Connecting should be the first thing the script does, so use a tight timeout.
 	protected static final int CONNECT_TIMEOUT_MS = 3000;
-	protected static final int TIMEOUT_SECONDS = 300;
+	protected static final int TIMEOUT_SECONDS = SystemUtilities.isInTestingBatchMode() ? 10 : 300;
 	protected static final int QUIT_TIMEOUT_MS = 1000;
 	public static final String INSTRUMENT_STOPPED = """
 			ghidra trace tx-open "Fake" 'ghidra trace create-obj Inferiors[1]'
@@ -90,23 +91,64 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 			end
 			python gdb.events.cont.connect(lambda e: gdb.execute("set-running"))""";
 
-	protected TraceRmiService traceRmi;
+	public static final boolean IS_WINDOWS =
+		OperatingSystem.CURRENT_OPERATING_SYSTEM == OperatingSystem.WINDOWS;
+
+	record PlatDep(String name, String endian, String lang, String cSpec,
+			String os, String startCmd, String callMne, String intReg, String floatReg) {
+		static final PlatDep ARM64 =
+			new PlatDep("arm64", "little", "AARCH64:LE:64:v8A", "default",
+				"macos", "start", "bl", "x0", "s0");
+		static final PlatDep X8664 = // Note AT&T callq
+			new PlatDep("x86_64", "little", "x86:LE:64:default", IS_WINDOWS ? "windows" : "gcc",
+				IS_WINDOWS ? "Windows" : "GNU/Linux", IS_WINDOWS ? "starti" : "start",
+				"callq", "rax", "st0");
+	}
+
+	public static final PlatDep PLAT = computePlat();
+
+	static PlatDep computePlat() {
+		return switch (System.getProperty("os.arch")) {
+			case "aarch64" -> PlatDep.ARM64;
+			case "x86" -> PlatDep.X8664;
+			case "amd64" -> PlatDep.X8664;
+			default -> throw new AssertionError(
+				"Unrecognized arch: " + System.getProperty("os.arch"));
+		};
+	}
+
+	/** Some snapshot likely to exceed the latest */
+	protected static final long SNAP = 100;
+
+	protected static boolean didSetupPython = false;
+
+	protected TraceRmiPlugin traceRmi;
 	private Path gdbPath;
 	private Path outFile;
 	private Path errFile;
 
-	// @BeforeClass
+	@BeforeClass
 	public static void setupPython() throws Throwable {
-		new ProcessBuilder("gradle", "Debugger-agent-gdb:assemblePyPackage")
+		if (didSetupPython) {
+			// Only do this once when running the full suite.
+			return;
+		}
+		if (SystemUtilities.isInTestingBatchMode()) {
+			// Don't run gradle in gradle. It already did this task.
+			return;
+		}
+		String gradleCmd = IS_WINDOWS ? "gradle.bat" : "gradle";
+		String gradle = DummyProc.which(gradleCmd);
+		new ProcessBuilder(gradle, "assemblePyPackage")
 				.directory(TestApplicationUtils.getInstallationDirectory())
 				.inheritIO()
 				.start()
 				.waitFor();
+		didSetupPython = true;
 	}
 
 	protected void setPythonPath(ProcessBuilder pb) throws IOException {
-		String sep =
-			OperatingSystem.CURRENT_OPERATING_SYSTEM == OperatingSystem.WINDOWS ? ";" : ":";
+		String sep = IS_WINDOWS ? ";" : ":";
 		String rmiPyPkg = Application.getModuleSubDirectory("Debugger-rmi-trace",
 			"build/pypkg/src").getAbsolutePath();
 		String gdbPyPkg = Application.getModuleSubDirectory("Debugger-agent-gdb",
@@ -126,6 +168,13 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 		gdbPath = getGdbPath();
 		outFile = Files.createTempFile("gdbout", null);
 		errFile = Files.createTempFile("gdberr", null);
+	}
+
+	@After
+	public void tearDownTraceRmi() throws IOException {
+		for (TraceRmiConnection cx : traceRmi.getAllConnections()) {
+			cx.close();
+		}
 	}
 
 	protected void addAllDebuggerPlugins() throws PluginException {
@@ -163,7 +212,12 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 
 		protected String handle() {
 			String filtErr = filterLines(stderr, line -> {
-				return !line.contains("warning: could not find '.gnu_debugaltlink' file");
+				return !line.contains("warning: could not find '.gnu_debugaltlink' file") &&
+					!line.contains("No symbol tbale loaded.") &&
+					!line.contains("Failed to resume program execution") &&
+					!line.contains("PC register is not available") &&
+					!line.contains("warning: ?????") &&
+					!line.contains("warning: cY");
 			});
 			if (!filtErr.isBlank() | 0 != exitCode) {
 				throw new GdbError(exitCode, stdout, stderr);
@@ -258,6 +312,7 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 
 		@Override
 		public void close() throws Exception {
+			Exception finalExc = null;
 			Msg.info(this, "Cleaning up gdb");
 			try {
 				try {
@@ -275,7 +330,10 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 						 * compiled from source on a rather un-modern distro.
 						 */
 						Msg.warn(this, "gdb hung on quit. Sending SIGCONT.");
-						Runtime.getRuntime().exec("kill -SIGCONT %d".formatted(exec.gdb.pid()));
+						String kill = DummyProc.which("kill");
+						new ProcessBuilder(kill, "-SIGCONT", "%d".formatted(exec.gdb.pid()))
+								.start()
+								.waitFor();
 						asyncQuit.get(QUIT_TIMEOUT_MS, TimeUnit.MILLISECONDS);
 					}
 				}
@@ -283,16 +341,26 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 					// expected
 				}
 				catch (ExecutionException e) {
-					if (!(e.getCause() instanceof TraceRmiError)) {
+					if (!(e.getCause() instanceof TraceRmiError ||
+						e.getCause() instanceof SocketException)) {
 						throw e;
 					}
 				}
-				GdbResult r = exec.future.get(TIMEOUT_SECONDS, TimeUnit.SECONDS);
-				r.handle();
-				waitForPass(() -> assertTrue(connection.isClosed()));
+				try {
+					GdbResult r = exec.future.get(TIMEOUT_SECONDS, TimeUnit.SECONDS);
+					r.handle();
+				}
+				catch (Exception e) {
+					finalExc = e;
+				}
+				waitForPass(this, () -> assertTrue(connection.isClosed()), TIMEOUT_SECONDS,
+					TimeUnit.SECONDS);
 			}
 			finally {
 				exec.gdb.destroyForcibly();
+				if (finalExc != null) {
+					throw finalExc;
+				}
 			}
 		}
 	}
@@ -330,8 +398,8 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 		return stdout;
 	}
 
-	protected void waitState(int infnum, Supplier<Long> snapSupplier, TargetExecutionState state) {
-		TraceObjectKeyPath infPath = TraceObjectKeyPath.parse("Inferiors").index(infnum);
+	protected void waitState(int infnum, Supplier<Long> snapSupplier, TraceExecutionState state) {
+		KeyPath infPath = KeyPath.parse("Inferiors").index(infnum);
 		TraceObject inf =
 			Objects.requireNonNull(tb.trace.getObjectManager().getObjectByCanonicalPath(infPath));
 		waitForPass(
@@ -340,11 +408,11 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 	}
 
 	protected void waitStopped() {
-		waitState(1, () -> 0L, TargetExecutionState.STOPPED);
+		waitState(1, () -> 0L, TraceExecutionState.STOPPED);
 	}
 
 	protected void waitRunning() {
-		waitState(1, () -> 0L, TargetExecutionState.RUNNING);
+		waitState(1, () -> 0L, TraceExecutionState.RUNNING);
 	}
 
 	protected String extractOutSection(String out, String head) {
@@ -370,6 +438,12 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 			buf.write(lineData);
 		}
 		return new MemDump(address, buf.toByteArray());
+	}
+
+	protected void waitDomainObjectClosed(String path) {
+		DomainFile df = env.getProject().getProjectData().getFile(path);
+		assertNotNull(df);
+		waitForPass(() -> assertFalse(df.isOpen()));
 	}
 
 	protected ManagedDomainObject openDomainObject(String path) throws Exception {
@@ -522,4 +596,25 @@ public abstract class AbstractGdbTraceRmiTest extends AbstractGhidraHeadedDebugg
 		}
 		throw lastError;
 	}
+
+	public static String which(String cmd) {
+		return DummyProc.which(cmd).replace('\\', '/');
+	}
+
+	public static String projectName(String cmd) {
+		String ext = IS_WINDOWS ? ".exe" : "";
+		return "/New Traces/gdb/" + cmd + ext;
+	}
+
+	static String getSpecimenNewThreadAndExit() {
+		return IS_WINDOWS ? which("expCreateThreadExit") : which("expCloneExit");
+	}
+
+	static int getSleepThreadCount() {
+		// The targets above use different sleep methods:
+		//   Linux spawns clock_nanosleep
+		//   Windows spawns ZwDelayExecution and multiple ZwWaitForWork threads
+		return IS_WINDOWS ? 2 : 1;
+	}
+
 }
